sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:4: error: not found: value getNombreValeur
  while (i< getNombreValeur()){
            ^AlgGnomeSort:9: error: type mismatch;
 found   : Unit
 required: Boolean
    if (i=0){
         ^